--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "less-loader": "^4.0.5",
         "sinon": "^4.2.2",
         "style-loader": "^0.19.1",
+        "three": "^0.89.0",
         "webpack": "^3.10.0",
         "webpack-dev-server": "^2.11.1",
         "webpack-merge": "^4.1.1"
